--- a/.github/workflows/terraform-infra-deploy.yml
+++ b/.github/workflows/terraform-infra-deploy.yml
@@ -1,6 +1,21 @@
 name: Terraform Infrastructure Deploy (Reusable)
 
 on:
+  workflow_call:
+    inputs:
+      aws_region:
+        required: false
+        type: string
+        default: 'us-east-1'
+      terraform_version:
+        required: false
+        type: string
+        default: '1.6.0'
+    secrets:
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        required: true
   push:
     branches:
       - main
